# lama

./: .clang-format  .clang-tidy  .gitignore  Makefile  README.md  cmd.ino  config.h  config.ino  display.h  display.ino  helper.ino  lama.ino  lora.h  lora.ino  lora_packet.h  lora_packet.ino  lora_stats.h  lora_stats.ino  nodes.h  packet.h  packet.ino  radio.ino  radiolib_lora_rxtx3.ino  rx_history.h  rx_history.ino  serial.h  serial.ino  state.h  state.ino  wifi.h  wifi.ino
lama-core-rust/: .gitignore  Cargo.toml  Makefile  lama_packet.h
lama-core-rust/include/: lama_core.h
lama-core-rust/integration_tests/: build_test.sh  c_integration_test.c
lama-core-rust/scripts/: build.sh  fmt.sh  lib.sh
lama-core-rust/src/: config.rs  lib.rs  lib.rs_OLD
lama-main-pio/: .gitignore  CMakeLists.txt  Makefile  cppcheck-suppressions.txt  platformio.ini
lama-main-pio/scripts/: build.sh  clean.sh  fmt.sh  monitor.sh  test.sh  upload.sh
lama-main-pio/src/: main.cpp
lama-main-pio/src/arduino/: arduino_bridge.cpp  arduino_bridge.h  arduino_std_functions.cpp  config.cpp  config.h
lama-packet-rust/: .gitignore  Cargo.toml  Makefile
lama-packet-rust/integration_tests/: build_test.sh
lama-packet-rust/scripts/: clean.sh  lib.sh  test.sh
lama-packet-rust/src/: lib.rs  lora_packet.rs
src_try/: Makefile  build.extra_flags.txt  build.sh  build_with_rust.sh  cmd.ino  config.h  cppcheck-suppressions.txt  display.h  display.ino  extra_script.py  lama.ino  lama_packet.h  lora_packet.ino  nodes.ino  platform.local.txt  platformio.ini  platformio.ini_INITIAL  platformio.ini_MINIMAL  serial.h  state.h  state.ino  wifi.ino
src_try/OLD2/: lama.ino
